--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react-dom": "^17.0.0",
     "react-scripts": "3.4.4"
   },
+  "engines": {
+    "node": "12.14.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
